# rust-examples

./: LICENSE
basics/: .gitignore  .rustfmt.toml  Cargo.toml  uuid
basics/async/blocking/: Cargo.toml
basics/async/blocking/src/: main.rs
basics/async/hello-async/: Cargo.toml
basics/async/hello-async/src/: main.rs
basics/async/hello-tokio/: Cargo.toml
basics/async/hello-tokio/src/: main.rs
basics/async/restclient/: Cargo.toml
basics/async/restclient/src/: main.rs
basics/async/thumb_server/: .gitignore  Cargo.toml
basics/async/thumb_server/src/: index.html  main.rs
basics/async/tokio_select/: Cargo.toml
basics/async/tokio_select/src/: main.rs
basics/async/tokio_testing/: Cargo.toml
basics/async/tokio_testing/src/: lib.rs
basics/authentication/: Cargo.toml
basics/authentication/src/: hashing.rs  lib.rs  role.rs  user.rs
basics/concurrency/atomics/src/: main.rs
basics/concurrency/channels1/src/: main.rs
basics/concurrency/dashing/: Cargo.toml
basics/concurrency/dashing/src/: main.rs
basics/concurrency/divide_work/src/: main.rs
basics/concurrency/footgun/src/: main.rs
basics/concurrency/hello/src/: main.rs
basics/concurrency/mutexes/: Cargo.toml
basics/concurrency/mutexes/src/: main.rs
basics/concurrency/parking/src/: main.rs
basics/concurrency/rayon-iters/: Cargo.toml
basics/concurrency/rayon-iters/src/: main.rs
basics/concurrency/rayon-scope/: Cargo.toml
basics/concurrency/rayon-scope/src/: main.rs
basics/concurrency/rwlocks/: Cargo.toml
basics/concurrency/rwlocks/src/: main.rs
basics/concurrency/scoped_threads/src/: main.rs
basics/concurrency/thread_builder/src/: main.rs
basics/concurrency/thread_pool/: Cargo.toml
basics/concurrency/thread_pool/src/: main.rs
basics/concurrency/workers/src/: main.rs
basics/console/src/: errors.rs  io.rs  lib.rs
basics/login/: Cargo.toml
basics/login/src/: main.rs
basics/login_manager/: Cargo.toml
basics/login_manager/src/: main.rs
basics/memory/cycles/: Cargo.toml
basics/memory/cycles/src/: main.rs
basics/memory/dropping/: Cargo.toml
basics/memory/dropping/src/: main.rs
basics/memory/low_lvl/: Cargo.toml
basics/memory/low_lvl/src/: main.rs
basics/project/collector/: Cargo.toml  uuid
basics/project/collector/src/: data_collector.rs  errors.rs  main.rs  sender.rs
basics/project/server/: .gitignore  Cargo.toml
basics/project/server/html/: collector.html  index.html
basics/project/server/migrations/: 20251019130800_initial.sql
basics/project/server/src/: api.rs  collector.rs  commands.rs  main.rs  web.rs
basics/project/shared_data/: Cargo.toml
basics/project/shared_data/src/: lib.rs
basics/src/: console.rs  main.rs
