[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = [
    "async/hello-async",
    "authentication",
    "concurrency/atomics",
    "concurrency/channels1",
    "concurrency/dashing",
    "concurrency/divide_work",
    "concurrency/footgun",
    "concurrency/hello",
    "concurrency/mutexes",
    "concurrency/parking",
    "concurrency/rayon-iters",
    "concurrency/rayon-scope",
    "concurrency/rwlocks",
    "concurrency/scoped_threads",
    "concurrency/thread_builder",
    "concurrency/thread_pool",
    "concurrency/workers",
    "console",
    "login",
    "login_manager",
]
resolver = "3"

