[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = [
    "async/blocking",
    "async/hello-async",
    "async/hello-tokio",
    "async/restclient",
    "async/thumb_server",
    "async/tokio_select",
    "async/tokio_testing",
    "authentication",
    "concurrency/atomics",
    "concurrency/channels1",
    "concurrency/dashing",
    "concurrency/divide_work",
    "concurrency/footgun",
    "concurrency/hello",
    "concurrency/mutexes",
    "concurrency/parking",
    "concurrency/rayon-iters",
    "concurrency/rayon-scope",
    "concurrency/rwlocks",
    "concurrency/scoped_threads",
    "concurrency/thread_builder",
    "concurrency/thread_pool",
    "concurrency/workers",
    "console",
    "login",
    "login_manager",
    "memory/cycles",
    "memory/dropping",
    "memory/low_lvl",
    "project/collector",
    "project/server",
    "project/shared_data",
]
resolver = "3"

[profile.release]
opt-level = "z"
strip = true # Automatically strip symbols
lto = true
codegen-units = 1
panic = "abort" # Теряем информацию в случае паники, но выигрываем значительно в размере
