[package]
name = "thumb_server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["multipart"] }
dotenv = "0.15.0"
futures = "0.3.31"
image = "0.25.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
