[package]
name = "server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
shared_data = { path = "../shared_data" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
uuid = "1.18.1"
dotenv = "0.15.0"
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
opt-level = "z"
strip = true # Automatically strip symbols
lto = true
codegen-units = 1
panic = "abort" # Теряем информацию в случае паники, но выигрываем значительно в размере
